--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE HTML>
 <html>
+	<style>
+
+	</style>
 	<head>
 		<title>Net Neutrality Position</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
-
+		<!-- Body -->
+		<h1>Net Neutrality Position</h1>
+		<h2>CS 3604</h2>
+		<h2>Patrick Hartmann</h2>
 	</body>
 </html>
