--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 	<style>
-
+		h1 {
+			color: blue;
+		}
 	</style>
 	<head>
 		<title>Net Neutrality Position</title>
@@ -11,7 +13,74 @@
 	<body>
 		<!-- Body -->
 		<h1>Net Neutrality Position</h1>
-		<h2>CS 3604</h2>
-		<h2>Patrick Hartmann</h2>
+		<h2>CS 3604- Patrick Hartmann</h2>
+		<br><br>
+
+		<div id="#background" style="color: blue;">
+			<h3>Background</h3>
+			<p id="background">
+				Before the Internet, the Federal Communications Commission (FCC) was
+				created through the Communications Act of 1934; a group that would play
+				an instrumental role in regulating how the Internet is handled and what's
+				considered fair play and what isn't. Along with it, telecommunication
+				companies were given the <strong>common carrier</strong> label, granting
+				the FCC increased control in regulating their practices, especially
+				preventing telecommunications monopolies. In its early years, the Internet
+				was seen mainly as a superior communication avenue to more traditional methods
+				methods like writing letters, or even relatively advanced forms like the
+				telegram or radio. Thus, it was viewed as a communication service by the FCC
+				as part of Title 1. Laws protecting net-neutrality, a now infamous term first
+				used by professor of law at UVA, Tim Wu, appeared to be on an upswing when the
+				FCC re-labeled the Internet as a utility under Title 2, giving them
+				increased policing power over ISPs. They also passed the Open Internet Order
+				in 2010 which strengthened the FCC's grip over ISPs in favor of net-neutrality.
+				This only lasted two years, however, before the FCC, backed by newly
+				appointed chairman Ajit Pai, repealed net-neutrality back to the more
+				loosely-regulated laws under Title 1. This included ISPs no longer being
+				considered as common carriers, a big hit to the FCC's ability to enforce
+				net-neutrality.
+			</p>
+		</div>
+		<br>
+		<div id="#neutrality" style="color: orange;">
+			<h3>Net-Neutrality</h3>
+			<img src="https://storage.needpix.com/rsynced_images/funnel-155119_1280.png"
+				alt="throttle" width="80px" height="80px">
+			<p>
+				One of the biggest components of net-neutrality is the banning of
+				<strong>throttling</strong> by ISPs. Throttling is the act of bottle-
+				necking (or flat-out blocking) service to certain customers or for certain
+				requests. The picture of the funnel helps illustrate how bandwidth gets
+				allocated before and after throttling. An example of throttling is when
+				Comcast was found to be throttling BitTorrent traffic which led to an
+				extensive battle in the courts with the FCC, one that Comcast ultimately won.
+			</p>
+			<p>
+				To prevent throttling, many ISPs use <strong>over-provisioning</strong>.
+				Over-provisioning is where the ISP identifies the peaks and valleys in
+				Internet traffic at various times during the day and allocates more or less
+				bandwidth accordingly. So rather than having to throttle requests during
+				the Super Bowl for example, the ISP will increase the bandwidth during
+				the Super Bowl where millions of people will be taxing the bandwidth while
+				decreasing it in the middle of the night where much fewer users need the
+				bandwidth. This is a great and simple way in my opinion of avoiding net-
+				neutrality issues related to throttling.
+			</p>
+		</div>
+		<br>
+		<div id="#views" syle="color: red;">
+			<h3>Political/Philosophical Views</h3>
+		</div>
+		<br>
+		<div id="#conclusion" style="color: purple;">
+			<h3>Conclusion</h3>
+		</div>
+		<br><br>
+		<div id="#references">
+			<h3>References</h3>
+			<ul>
+				<li>The Readings on Canvas</li>
+			</ul>
+		</div>
 	</body>
 </html>
