--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 		}
 	</style>
 	<head>
-		<title>Net Neutrality Position</title>
+		<title>Net Neutrality Background and Position</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	</head>
 	<body>
 		<!-- Body -->
-		<h1>Net Neutrality Position</h1>
+		<img src="https://cdn.pixabay.com/photo/2016/12/23/18/13/communication-1927706_960_720.jpg"
+			alt="internet" width="300px" height="260px">
+		<h1>Net Neutrality Background and Position</h1>
 		<h2>CS 3604- Patrick Hartmann</h2>
 		<br><br>
 
@@ -44,13 +46,17 @@
 		<br>
 		<div id="#neutrality" style="color: orange;">
 			<h3>Net-Neutrality</h3>
-			<img src="https://storage.needpix.com/rsynced_images/funnel-155119_1280.png"
-				alt="throttle" width="80px" height="80px">
+				<br>
+				<iframe src="https://www.youtube.com/embed/EdMeIw6o8Xo" width="300px"
+				height="220px"></iframe>
 			<p>
-				One of the biggest components of net-neutrality is the banning of
-				<strong>throttling</strong> by ISPs. Throttling is the act of bottle-
-				necking (or flat-out blocking) service to certain customers or for certain
-				requests. The picture of the funnel helps illustrate how bandwidth gets
+				I think the video above is a great explanation of net-neutrality in layman's
+				terms with an easy-to-follow analogy. I recommend watching that before
+				continuing reading if you are unsure of what exactly net-neutrality means.
+				One of the biggest components of net-neutrality is disallowing <strong>
+				throttling</strong> by ISPs. Throttling is the act of bottle-necking (or
+				flat-out blocking) service to certain customers or for certain requests.
+				The picture of the funnel below helps illustrate how bandwidth gets
 				allocated before and after throttling. An example of throttling is when
 				Comcast was found to be throttling BitTorrent traffic which led to an
 				extensive battle in the courts with the FCC, one that Comcast ultimately won.
@@ -66,9 +72,12 @@
 				bandwidth. This is a great and simple way in my opinion of avoiding net-
 				neutrality issues related to throttling.
 			</p>
+			<br>
+			<img src="https://storage.needpix.com/rsynced_images/funnel-155119_1280.png"
+				alt="throttle" width="80px" height="80px">
 		</div>
 		<br>
-		<div id="#views" syle="color: red;">
+		<div id="#views" style="color: red;">
 			<h3>Political/Philosophical Views</h3>
 		</div>
 		<br>
@@ -80,6 +89,7 @@
 			<h3>References</h3>
 			<ul>
 				<li>The Readings on Canvas</li>
+				<li>All Images have Creative Commons Licensing</li>
 			</ul>
 		</div>
 	</body>
