--- a/index.html
+++ b/index.html
@@ -79,6 +79,37 @@
 		<br>
 		<div id="#views" style="color: red;">
 			<h3>Political/Philosophical Views</h3>
+			<p>
+				I'm going to compare two political/philosophical views on net-neutrality:
+				laissez-faire capitalism and socialism. A laissez-faire point of view on
+				net-neutrality would certainly be against intervention by the government
+				in the business practices of ISPs, meaning the ISPs are free to operate
+				however they please regarding the allocation of bandwidth and rate limiting
+				wherever they see fit. The price customers have to pay to use the ISP services
+				is also determined entirely by the free market which in theory would
+				encourage healthy competition between ISPs. Due to the overwhelming barriers
+				to entry in the ISP market with companies needing the wherewithal to support
+				the massive network infrastructure necessary to provide Internet services,
+				these markets often break down into natural oligopolies with a small number
+				of firms controlling nearly the entire market.
+			</p>
+			<p>
+				On the opposite side, a socialist point of view would encourage heavy
+				government involvement in stopping the ISP market from setting out-of-control
+				prices for Internet use, throttling requests they don't find favorable, and
+				rate-limiting customers who don't pay enough money. Stricter regulation is
+				needed to limit monopolies and the abuse of that position of power by ISPs,
+				which of course ultimately has severe negative ramifications for consumers.
+			</p>
+			<p>
+				I tend to side with the socialist point of view regarding net-neutrality.
+				Being a consumer that relies heavily on the services provided to me by ISPs,
+				Also, from a fairness perspective, the Internet should be an open network of
+				information where people can access all publicly-available sites <strong>
+				equally</strong> and without ISPs essentially extorting consumers into paying
+				an arm and a leg for their service when they really don't have any other way
+				to access the Internet.
+			</p>
 		</div>
 		<br>
 		<div id="#conclusion" style="color: purple;">
@@ -89,7 +120,10 @@
 			<h3>References</h3>
 			<ul>
 				<li>The Readings on Canvas</li>
-				<li>All Images have Creative Commons Licensing</li>
+				<li><a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiIo7XB74jjAhWOAp0JHVcgBPMQjRx6BAgBEAU&url=https%3A%2F%2Fpixabay.com%2Fillustrations%2Fcommunication-internet-1927706%2F&psig=AOvVaw0T_e0kvQUgKGLbSi2yQ10D&ust=1561697722187254with"
+					target="_blank">Internet Image</a> with CC licensing</li>
+				<li><a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.pixabay.com%2Fphoto%2F2013%2F07%2F13%2F01%2F07%2Ffunnel-155119_960_720.png&imgrefurl=https%3A%2F%2Fpixabay.com%2Fvectors%2Ffunnel-cone-horn-pit-feed-hopper-155119%2F&docid=EFYGLLsKk-I_kM&tbnid=JTWNwhCQjIA15M%3A&vet=10ahUKEwif-fLW8IjjAhXDmuAKHZkKA-cQMwh4KA4wDg..i&w=665&h=720&bih=802&biw=1368&q=funnel&ved=0ahUKEwif-fLW8IjjAhXDmuAKHZkKA-cQMwh4KA4wDg&iact=mrc&uact=8"
+					target="_blank">Funnel Image</a> with CC licensing</li>
 			</ul>
 		</div>
 	</body>
