--- a/index.html
+++ b/index.html
@@ -101,25 +101,42 @@
 				needed to limit monopolies and the abuse of that position of power by ISPs,
 				which of course ultimately has severe negative ramifications for consumers.
 			</p>
-			<p>
-				I tend to side with the socialist point of view regarding net-neutrality.
-				Being a consumer that relies heavily on the services provided to me by ISPs,
-				Also, from a fairness perspective, the Internet should be an open network of
-				information where people can access all publicly-available sites <strong>
-				equally</strong> and without ISPs essentially extorting consumers into paying
-				an arm and a leg for their service when they really don't have any other way
-				to access the Internet.
-			</p>
 		</div>
 		<br>
 		<div id="#conclusion" style="color: purple;">
 			<h3>Conclusion</h3>
+			<p>
+				Overall, I tend to side with the socialist point of view regarding net-
+				neutrality.	Being a consumer that relies heavily on the services provided
+				to me by ISPs, it would make sense to favor the side that has a greater
+				interest and effort in protecting an impartial Internet. And one that does
+				not cost consumers an exorbitant amount of money. Also, from a fairness
+				perspective, the Internet should be an open network of information where
+				people can access all publicly-available sites <strong>equally</strong>
+				and without ISPs essentially extorting consumers into paying an arm and a
+				leg for their service when they really don't have any other way to access
+				the Internet. Taking advantage of consumers in this way is highly unethical
+				and should also be illegal. I would liken it to the pharmaceutical companies
+				that control the markets for certain drugs people may depend on to live.
+				While maybe not quite as ominously life-or-death, the Internet has become
+				such an	integral part of our lives that ISPs being allowed to operate in a
+				way that supports net non-neutrality and partiality parallels the unethical
+				behaviors of pharmaceutical companies	who likewise take advantage of the
+				people who have nowhere else to go for the service they depend on.
+				Net non-neutrality has the potential to drive out people who simply do not
+				have the money for Internet access even more so than already exists. These
+				people are then deprived of the freedom of information that every human
+				should be entitled to. Therefore, we <strong>must</strong> protect net-
+				neutrality at all costs.
+			</p>
 		</div>
 		<br><br>
 		<div id="#references">
 			<h3>References</h3>
 			<ul>
 				<li>The Readings on Canvas</li>
+				<li><a href="https://www.internetsociety.org/internet/history-internet/brief-history-internet/"
+					target="_blank">History</a></li>
 				<li><a href="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwiIo7XB74jjAhWOAp0JHVcgBPMQjRx6BAgBEAU&url=https%3A%2F%2Fpixabay.com%2Fillustrations%2Fcommunication-internet-1927706%2F&psig=AOvVaw0T_e0kvQUgKGLbSi2yQ10D&ust=1561697722187254with"
 					target="_blank">Internet Image</a> with CC licensing</li>
 				<li><a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.pixabay.com%2Fphoto%2F2013%2F07%2F13%2F01%2F07%2Ffunnel-155119_960_720.png&imgrefurl=https%3A%2F%2Fpixabay.com%2Fvectors%2Ffunnel-cone-horn-pit-feed-hopper-155119%2F&docid=EFYGLLsKk-I_kM&tbnid=JTWNwhCQjIA15M%3A&vet=10ahUKEwif-fLW8IjjAhXDmuAKHZkKA-cQMwh4KA4wDg..i&w=665&h=720&bih=802&biw=1368&q=funnel&ved=0ahUKEwif-fLW8IjjAhXDmuAKHZkKA-cQMwh4KA4wDg&iact=mrc&uact=8"
