--- a/index.html
+++ b/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE HTML>
 <html>
-	<style>
-		h1 {
-			color: blue;
-		}
-	</style>
 	<head>
 		<title>Net Neutrality Background and Position</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	</head>
 	<body>
-		<!-- Body -->
 		<img src="https://cdn.pixabay.com/photo/2016/12/23/18/13/communication-1927706_960_720.jpg"
 			alt="internet" width="300px" height="260px">
-		<h1>Net Neutrality Background and Position</h1>
+		<h1 style="color: blue;">Net Neutrality Background and Position</h1>
 		<h2>CS 3604- Patrick Hartmann</h2>
-		<br><br>
+		<br>
 
 		<div id="#background" style="color: blue;">
 			<h3>Background</h3>
@@ -27,10 +21,19 @@
 				considered fair play and what isn't. Along with it, telecommunication
 				companies were given the <strong>common carrier</strong> label, granting
 				the FCC increased control in regulating their practices, especially
-				preventing telecommunications monopolies. In its early years, the Internet
-				was seen mainly as a superior communication avenue to more traditional methods
-				methods like writing letters, or even relatively advanced forms like the
-				telegram or radio. Thus, it was viewed as a communication service by the FCC
+				preventing telecommunications monopolies. In 1968, work began on ARPANET,
+				a complex packet-switching network that formed the basis of early Internet.
+				Transmition Control Protocol and Internet Protocol (TCP and IP, respectively)
+				are the standards and models by which information is transmitted on the
+				Internet. IP especially can be seen as an extension of the packet-switching
+				system used by ARPANET since it is a way of explaining how exactly a packet
+				gets transmitted from the sender to the receiver [2].
+			</p>
+			<p>
+				Because of this idea of packet-switching and a sender and receiver, the
+				Internet in its early years, was seen mainly as just a superior communication
+				avenue to more traditional methods like written communication or even relatively
+				advanced forms like the	telegram or radio. Thus, it was viewed as a communication service by the FCC
 				as part of Title 1. Laws protecting net-neutrality, a now infamous term first
 				used by professor of law at UVA, Tim Wu, appeared to be on an upswing when the
 				FCC re-labeled the Internet as a utility under Title 2, giving them
@@ -38,13 +41,16 @@
 				in 2010 which strengthened the FCC's grip over ISPs in favor of net-neutrality.
 				This only lasted two years, however, before the FCC, backed by newly
 				appointed chairman Ajit Pai, repealed net-neutrality back to the more
-				loosely-regulated laws under Title 1. This included ISPs no longer being
+				loosely-regulated laws under Title 1 [1]. This included ISPs no longer being
 				considered as common carriers, a big hit to the FCC's ability to enforce
-				net-neutrality.
+				net-neutrality. The Open Internet Order was also discarded for all intents
+				and purposes after the FCC lost a suit to Verizon where the tech giant argued
+				that there was legal backing for the FCC to enact and enforce the Open Internet
+				Order policies.
 			</p>
 		</div>
 		<br>
-		<div id="#neutrality" style="color: orange;">
+		<div id="#neutrality">
 			<h3>Net-Neutrality</h3>
 				<br>
 				<iframe src="https://www.youtube.com/embed/EdMeIw6o8Xo" width="300px"
@@ -129,11 +135,21 @@
 				should be entitled to. Therefore, we <strong>must</strong> protect net-
 				neutrality at all costs.
 			</p>
+			<p>
+				The best way I can think of accomplishing this is by having the government
+				continue to impose strict regulations on ISPs throttling and rate-limiting
+				traffic with the purpose of creating fast or slow lanes for different users.
+				Such actions should be met with harsh punishments by the government under
+				those regulations. I think they also need to promote more competition in
+				those markets, possibly by offering greater incentives for smaller comapnies
+				to expand and subsidize some of their startup costs to help lessen the gap
+				between the smaller companies and the industry giants like Comcast.
+			</p>
 		</div>
 		<br><br>
-		<div id="#references">
+		<div id="#references" style="color: green;">
 			<h3>References</h3>
-			<ul>
+			<ol>
 				<li>The Readings on Canvas</li>
 				<li><a href="https://www.internetsociety.org/internet/history-internet/brief-history-internet/"
 					target="_blank">History</a></li>
@@ -141,7 +157,7 @@
 					target="_blank">Internet Image</a> with CC licensing</li>
 				<li><a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn.pixabay.com%2Fphoto%2F2013%2F07%2F13%2F01%2F07%2Ffunnel-155119_960_720.png&imgrefurl=https%3A%2F%2Fpixabay.com%2Fvectors%2Ffunnel-cone-horn-pit-feed-hopper-155119%2F&docid=EFYGLLsKk-I_kM&tbnid=JTWNwhCQjIA15M%3A&vet=10ahUKEwif-fLW8IjjAhXDmuAKHZkKA-cQMwh4KA4wDg..i&w=665&h=720&bih=802&biw=1368&q=funnel&ved=0ahUKEwif-fLW8IjjAhXDmuAKHZkKA-cQMwh4KA4wDg&iact=mrc&uact=8"
 					target="_blank">Funnel Image</a> with CC licensing</li>
-			</ul>
+			</ol>
 		</div>
 	</body>
 </html>
